# tattoo-trap

./: .gitignore  ARCHITECTURE.md  FETCH_IMAGES_HANDOFF.md  Makefile  README.md  plan.md
.playwright-mcp/: page-2026-06-08T19-28-53-611Z.yml
apps/web/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AccountMenu.tsx  ArtistCard.tsx  ArtistDirectory.tsx  ArtistDirectoryCard.tsx  ArtistDirectoryList.tsx  AuthProvider.tsx  ClearAllHiddenButton.tsx  FavoriteButton.tsx  NavBar.tsx  (+15 more)
designs/: Tattoo Trap.html
designs/src/: app.jsx  data.js  plates.jsx  screens.jsx  theme.js
pipeline/: .env.example  README.md  prune_branding_images.py  prune_junk_artists.py  prune_nontattoo_images.py  purge_orphans.py  pyproject.toml  recrawl_blocked.py
pipeline/seeds/: chicago-areas.csv  chicago.csv  iowa-city-areas.csv  peoria-areas.csv  peoria.csv  quad-cities-areas.csv
pipeline/src/tattoo_trap/: __init__.py  config.py  content_filter.py  crawl_shops.py  db.py  embed_images.py  embedder.py  image_sources.py  places.py  scrape_instagram.py  seed_shops.py  tag_artists.py
pipeline/src/tattoo_trap_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/tests/: test_artist_filter.py  test_parity.py
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_rpc.sql  0003_rls.sql  0004_seed_metros.sql  0005_artist_ig_scraped_at.sql  0006_profiles.sql  0007_favorites.sql  0008_hidden_artists.sql
(+29 files in other folders)
